running PMD and fix the warnnings